[gd_scene load_steps=15 format=3 uid="uid://u0rnbporjoyr"]

[ext_resource type="Script" path="res://Scripts/Boulder.gd" id="1_300n0"]
[ext_resource type="Texture2D" uid="uid://c1i60l3anjcxk" path="res://Art/BoulderBig.png" id="2_1p41f"]
[ext_resource type="Texture2D" uid="uid://bdgaf66h6b7vr" path="res://Art/BoulderMedium.png" id="3_xhuhq"]
[ext_resource type="Texture2D" uid="uid://bhdhb8oynuxxm" path="res://Art/BoulderSmall.png" id="4_rck2n"]
[ext_resource type="AudioStream" uid="uid://c5kwqrbfm2pkm" path="res://Audio/SFX/heavy-book-falling-96257.mp3" id="5_rdjip"]
[ext_resource type="AudioStream" uid="uid://cj0wqvk0kegj8" path="res://Audio/SFX/rock-break-hard-184891.mp3" id="6_6epbf"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ptcf8"]
friction = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_5e0a6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1p41f")
}],
"loop": true,
"name": &"big",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_xhuhq")
}],
"loop": true,
"name": &"med",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_rck2n")
}],
"loop": true,
"name": &"small",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gu4j6"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_45jtu"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7773n"]
radius = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fsm0x"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t66fy"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ef77w"]
radius = 60.0

[node name="Boulder" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_ptcf8")
inertia = 1.0
contact_monitor = true
max_contacts_reported = 1
constant_torque = -150.0
script = ExtResource("1_300n0")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5e0a6")
animation = &"small"

[node name="SmallCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gu4j6")
disabled = true

[node name="MediumCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_45jtu")
disabled = true

[node name="BigCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7773n")
disabled = true

[node name="DamageManager" type="Area2D" parent="."]

[node name="SmallCollisionShape2D" type="CollisionShape2D" parent="DamageManager"]
shape = SubResource("CircleShape2D_fsm0x")
disabled = true

[node name="MediumCollisionShape2D" type="CollisionShape2D" parent="DamageManager"]
shape = SubResource("CircleShape2D_t66fy")
disabled = true

[node name="BigCollisionShape2D" type="CollisionShape2D" parent="DamageManager"]
shape = SubResource("CircleShape2D_ef77w")
disabled = true

[node name="QuestTracker" type="RayCast2D" parent="."]
top_level = true
target_position = Vector2(0, -500)

[node name="LandAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_rdjip")
volume_db = 24.0

[node name="DespawnAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_6epbf")
volume_db = 24.0

[connection signal="body_entered" from="DamageManager" to="." method="_on_damage_manager_body_entered"]
